--- a/app/views/snsstudies/show.html.erb
+++ b/app/views/snsstudies/show.html.erb
@@ -91,12 +91,14 @@
         <td>MY ID=<%= @snsstudy.id %></td>
 
         <td>
-        <!-- build　自分のIDをrelationshipsのfollower_idに　　-->
+        <!-- build　自分のIDをrelationshipsのfollower_idに　　action="/relationships" -->
          <%= form_for(@snsstudy.relationships.build(followed_id: snsstudy.id)) do |f| %>
-         <div><%= f.hidden_field :followed_id %></div>
+         <div><%= f.hidden_field :followed_id %></div> <!--relationship[followed_id] type="hidden" value="2"-->
          <div><input id="snsstudy_id" name="snsstudy[id]" value="<%= @snsstudy.id %>"  type="hidden" /></div>
+          <!--
          <div><input id="follower_id" name="relationships[follower_id]" value="<%= @snsstudy.id %>"  type="hidden" /></div>
          <div><input id="followed_id" name="relationships[followed_id]" value="<%= snsstudy.id %>"  type="hidden" /></div>
+         -->
          <%= f.submit "Follow", class: "btn btn-large btn-primary" %>
          <% end %></td>
 
@@ -110,5 +112,9 @@
     <% end %>
   </tbody>
 </table>
+
+
+
+
 <%= link_to 'Edit', edit_snsstudy_path(@snsstudy) %> |
 <%= link_to 'Back', snsstudies_path %>
