--- a/app/views/snsstudies/show.html.erb
+++ b/app/views/snsstudies/show.html.erb
@@ -14,59 +14,16 @@
 
 
 <div class="stats">
-
     <strong id="following" class="stat">
       <%= @snsstudy.followed_users.count %>
     </strong>
-
-
     following
-  </a>
 
     <strong id="followers" class="stat">
       <%= @snsstudy.followers.count %>
     </strong>
     followers
-  </a>
 </div>
-
-<!--<p><%= debug(@snsstudy.relationships.inspect) %></p>
-<p>
-<% @relation.each do |rel| %>
-<%= rel.follower_id %>
-<% end %>
-</p>
-<%= debug(@relation.inspect) %>
-
-
-<p>
-<% if @snsstudy.id == "1" then %>
-自分ではありません。
-<% else %>
-自分<%= @snsstudy.id %>です。
-<% end %>
-</p>
-
-
-<% writers = ['1', '2', '3'] %>
-<p>
-<% writers.each do |writer| %>
-<% if writer == "1" then %>
-自分ではありません。
-<% else %>
-<%= writer %>さん。
-<% end %>
-<% end %>
-</p>
-
-<% writers = ['1', '2', '3'] %>
-<p>
-<% writers.each do |writer| %>
-<% if writer != "1" then %>
-<%= writer %>さん。
-<% end %>
-<% end %>
-</p>-->
 
 
 <br>
@@ -91,27 +48,25 @@
         <td>MY ID=<%= @snsstudy.id %></td>
 
         <td>
-　　　　　　　<% if @snsstudy.following?(snsstudy) %>
+         　<% if @snsstudy.following?(snsstudy) %>
     　　　　　<!--==フォローしてる フォロー解除ボタン ==-->
 　　　　　　　　　　<%= form_for(@snsstudy.relationships.find_by(followed_id: snsstudy.id),html: { method: :delete }) do |f| %>
-　　　　　　　　　　<input id="snsstudy_id" name="snsstudy[id]" value="<%= @snsstudy.id %>"  type="hidden" />
+　　　　　　　　　　<!--<input id="snsstudy_id" name="snsstudy[id]" value="<%= @snsstudy.id %>"  type="hidden" />-->
+　　　　　　　　　　<%= hidden_field_tag "snsstudy[id]", @snsstudy.id %>
 　　　　　　　　　　<%= f.submit "Unfollow", class: "btn btn-large" %>
 　　　　　　　　　　<% end %>
-　　　　　　<% else %>
-        　　<!--==フォローしていない フォローボタン ==-->
-       　 　<!-- build　自分のIDをrelationshipsのfollower_idに　　action="/relationships" -->
-         　<%= form_for(@snsstudy.relationships.build(followed_id: snsstudy.id)) do |f| %>
+          <% else %>
+           <!--==フォローしていない フォローボタン ==-->
+           <!-- build　自分のIDをrelationshipsのfollower_idに　　action="/relationships" -->
+           <%= form_for(@snsstudy.relationships.build(followed_id: snsstudy.id)) do |f| %>
+           <!-- ==== ネストしたルーティング /snsstudy/1/relationships ====  -->
          　<div><%= f.hidden_field :followed_id %></div> <!--relationship[followed_id] type="hidden" value="2"-->
-        　 <input id="snsstudy_id" name="snsstudy[id]" value="<%= @snsstudy.id %>"  type="hidden" />
-          <!--
-         　<div><input id="follower_id" name="relationships[follower_id]" value="<%= @snsstudy.id %>"  type="hidden" /></div>
-         　<div><input id="followed_id" name="relationships[followed_id]" value="<%= snsstudy.id %>"  type="hidden" /></div>
-         　-->
-        　 <%= f.submit "Follow", class: "btn btn-large btn-primary" %>
+          <!--<input id="snsstudy_id" name="snsstudy[id]" value="<%= @snsstudy.id %>"  type="hidden" />-->
+          <%= hidden_field_tag "snsstudy[id]", @snsstudy.id %>
+          <%= f.submit "Follow", class: "btn btn-large btn-primary" %>
          　<% end %>
-        　　<!--== フォローボタン END==-->
-　　　　　　　<% end %>
-
+         　<!--== フォローボタン END==-->
+          <% end %>
          </td>
       </tr>
       <% end %>
