--- a/app/views/snsstudies/_form.html.erb
+++ b/app/views/snsstudies/_form.html.erb
@@ -15,6 +15,18 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+    <div class="field">
+        <%= f.label :email %>
+      <%= f.text_field :email %>
+   </div>
+      <div class="field">
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+  </div>
+      <div class="field">
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
+    </div>
   <div class="field">
     <%= f.label :introduction %><br>
     <%= f.text_area :introduction %>
